--- a/views/base.pug
+++ b/views/base.pug
@@ -1,7 +1,7 @@
 -function prettyDate(date){
     -var d = date.getDate();
-    // -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-    -var monthNames = [ "Januaro", "Februaro", "Marto", "Aprilo", "Majo", "Junio", "Julio", "Augusto", "Septembro", "Oktobro", "Novembro", "Decembro"]
+    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
+    // -var monthNames = [ "Januaro", "Februaro", "Marto", "Aprilo", "Majo", "Junio", "Julio", "Augusto", "Septembro", "Oktobro", "Novembro", "Decembro"]
     -var m = monthNames[date.getMonth()];
     -var y = date.getFullYear();
     -return d+' '+m+' '+y;
@@ -15,28 +15,28 @@
   -return h+':'+str_m;
 -}
 
--function esperantasPeriodo(periodo){
-  -var anglaPeriodo = /Period (\d)/;
-  -var m = periodo.match(anglaPeriodo);
-  -if(m){
-    -return "Periodo " + m[1];
-  -}else{
-    -if(periodo == "Lunch"){
-      -return "Tagmanĝo";
-    -}else if(periodo == "Assembly"){
-      -return "Asembleo";
-    -}else if(periodo == "Break"){
-      -return "Paŭzo";
-    -}else if(periodo == "Class Meeting"){
-      -return "Klasa Kunveno";
-    -}else if(periodo == null){
-      -return "Nulo";
-    -}else{
-      -return periodo;
-    -}
-  -}
-  -return periodo;
--}
+// -function esperantasPeriodo(periodo){
+//   -var anglaPeriodo = /Period (\d)/;
+//   -var m = periodo.match(anglaPeriodo);
+//   -if(m){
+//     -return "Periodo " + m[1];
+//   -}else{
+//     -if(periodo == "Lunch"){
+//       -return "Tagmanĝo";
+//     -}else if(periodo == "Assembly"){
+//       -return "Asembleo";
+//     -}else if(periodo == "Break"){
+//       -return "Paŭzo";
+//     -}else if(periodo == "Class Meeting"){
+//       -return "Klasa Kunveno";
+//     -}else if(periodo == null){
+//       -return "Nulo";
+//     -}else{
+//       -return periodo;
+//     -}
+//   -}
+//   -return periodo;
+// -}
 -function prettyPeriod(period){
   -var d1 = period.start_time;
   -var d2 = period.end_time;
@@ -58,9 +58,15 @@
   -return s.substring(0, 10);
 -}
 
+-function addHours(d, h) {    
+   -d.setTime(d.getTime() + (h*60*60*1000)); 
+   -return d;   
+-}
+
 html
   head
     meta(charset='utf-8')
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='description', content='A front-end template that helps you build fast, modern mobile web apps.')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, minimum-scale=1.0')
@@ -110,20 +116,20 @@ html
           button#hdrbtn.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon
             i.material-icons more_vert
           ul.mdl-menu.mdl-js-menu.mdl-js-ripple-effect.mdl-menu--bottom-right(for='hdrbtn')
-            li.mdl-menu__item Pri ĉi retpaĝaro
-            li.mdl-menu__item Kontakton
-            li.mdl-menu__item Leĝa informo
+            li.mdl-menu__item This does nothing
+            li.mdl-menu__item Or at least not yet
+            li.mdl-menu__item Stop complaining
       .demo-drawer.mdl-layout__drawer.mdl-color--blue-grey-900.mdl-color-text--blue-grey-50
         header.demo-drawer-header
         nav.demo-navigation.mdl-navigation.mdl-color--blue-grey-800
           a.mdl-navigation__link(href='/admin/day')
             i.mdl-color-text--blue-grey-400.material-icons(role='presentation') event
-            | Hodiaŭ
+            | Today
           a.mdl-navigation__link(href='/admin/days')
             i.mdl-color-text--blue-grey-400.material-icons(role='presentation') event
-            | Tagoj
+            | Days
       main.mdl-layout__content.mdl-color--grey-100
         .mdl-grid.demo-content
           block content
-    a#view-source.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--colored.mdl-color-text--white(href='https://kdsapi.org/schedule/docs/', target='_blank') Vidas Dokumentado
+    a#view-source.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--colored.mdl-color-text--white(href='https://kdsapi.org/schedule/docs/', target='_blank') Read the Docs
     script(src='https://code.getmdl.io/1.3.0/material.min.js')
