--- a/views/days.pug
+++ b/views/days.pug
@@ -4,7 +4,7 @@ block content
   .mdl-cell.mdl-cell--12-col.mdl-cell--8-col-tablet.mdl-grid.mdl-grid--no-spacing
     .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--4-col-tablet.mdl-cell--12-col-desktop
       .mdl-card__title.mdl-card--expand.mdl-color--teal-300
-        h2.mdl-card__title-text Tagoj
+        h2.mdl-card__title-text Days
       .mdl-card__supporting-text.mdl-color-text--grey-600
         ul.demo-list-three.mdl-list
           each day in days
@@ -21,4 +21,4 @@ block content
     .demo-separator.mdl-cell--1-col
 
 block header
-  span.mdl-layout-title= "Tagoj"
+  span.mdl-layout-title= "Days"
