--- a/views/base.pug
+++ b/views/base.pug
@@ -1,7 +1,6 @@
 -function prettyDate(date){
     -var d = date.getDate();
-    // -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
-    -var monthNames = [ "Januaro", "Februaro", "Marto", "Aprilo", "Majo", "Junio", "Julio", "Augusto", "Septembro", "Oktobro", "Novembro", "Decembro"]
+    -var monthNames = [ "Jan", "Feb", "Mar", "Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec" ];
     -var m = monthNames[date.getMonth()];
     -var y = date.getFullYear();
     -return d+' '+m+' '+y;
@@ -15,28 +14,6 @@
   -return h+':'+str_m;
 -}
 
--function esperantasPeriodo(periodo){
-  -var anglaPeriodo = /Period (\d)/;
-  -var m = periodo.match(anglaPeriodo);
-  -if(m){
-    -return "Periodo " + m[1];
-  -}else{
-    -if(periodo == "Lunch"){
-      -return "Tagmanĝo";
-    -}else if(periodo == "Assembly"){
-      -return "Asembleo";
-    -}else if(periodo == "Break"){
-      -return "Paŭzo";
-    -}else if(periodo == "Class Meeting"){
-      -return "Klasa Kunveno";
-    -}else if(periodo == null){
-      -return "Nulo";
-    -}else{
-      -return periodo;
-    -}
-  -}
-  -return periodo;
--}
 -function prettyPeriod(period){
   -var d1 = period.start_time;
   -var d2 = period.end_time;
@@ -110,20 +87,20 @@ html
           button#hdrbtn.mdl-button.mdl-js-button.mdl-js-ripple-effect.mdl-button--icon
             i.material-icons more_vert
           ul.mdl-menu.mdl-js-menu.mdl-js-ripple-effect.mdl-menu--bottom-right(for='hdrbtn')
-            li.mdl-menu__item Pri ĉi retpaĝaro
-            li.mdl-menu__item Kontakton
-            li.mdl-menu__item Leĝa informo
+            li.mdl-menu__item These are blank
+            li.mdl-menu__item These are blank
+            li.mdl-menu__item These are blank
       .demo-drawer.mdl-layout__drawer.mdl-color--blue-grey-900.mdl-color-text--blue-grey-50
         header.demo-drawer-header
         nav.demo-navigation.mdl-navigation.mdl-color--blue-grey-800
           a.mdl-navigation__link(href='/admin/day')
             i.mdl-color-text--blue-grey-400.material-icons(role='presentation') event
-            | Hodiaŭ
+            | Today
           a.mdl-navigation__link(href='/admin/days')
             i.mdl-color-text--blue-grey-400.material-icons(role='presentation') event
-            | Tagoj
+            | Days
       main.mdl-layout__content.mdl-color--grey-100
         .mdl-grid.demo-content
           block content
-    a#view-source.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--colored.mdl-color-text--white(href='https://kdsapi.org/schedule/docs/', target='_blank') Vidas Dokumentado
+    a#view-source.mdl-button.mdl-js-button.mdl-button--raised.mdl-js-ripple-effect.mdl-button--colored.mdl-color-text--white(href='https://kdsapi.org/schedule/docs/', target='_blank') Read the Docs
     script(src='https://code.getmdl.io/1.3.0/material.min.js')
