--- a/views/period.pug
+++ b/views/period.pug
@@ -4,29 +4,29 @@ block content
   .mdl-cell.mdl-cell--12-col.mdl-cell--8-col-tablet.mdl-grid
     .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--4-col-tablet.mdl-cell--12-col-desktop
       .mdl-card__title.mdl-card--expand.mdl-color--teal-300
-        h2.mdl-card__title-text Periodo
+        h2.mdl-card__title-text Period
       .mdl-card__supporting-text.mdl-color-text--grey-600
         ul.demo-list-three.mdl-list
           li.mdl-list__item.mdl-list__item--three-line
             span.mdl-list__item-primary-content
               i.material-icons.mdl-list__item-avatar schedule
-              span= esperantasPeriodo(period.title)
+              span= period.title
               //- span= period.title
               span.mdl-list__item-text-body= prettyPeriod(period)
         span.mdl-list__item-secondary-content
           form(action="/admin/update_period", method="POST")
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-              label.mdl-textfield__label(for="date") dato
+              label.mdl-textfield__label(for="date") Date
               input.mdl-textfield__input(type="date", id="date", name="date")
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-              label.mdl-textfield__label(for="start_time") komenca tempo
+              label.mdl-textfield__label(for="start_time") State time
               input.mdl-textfield__input(type="datetime", id="start_time", name="start_time")
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
               input.mdl-textfield__input(type="datetime", id="end_time", name="end_time")
-              label.mdl-textfield__label(for="end_time") fina tempo
+              label.mdl-textfield__label(for="end_time") End time
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
               input.mdl-textfield__input(type="text", id="period_name", name="period_name", value=period.title)
-              label.mdl-textfield__label(for="sample3") Titolo
+              label.mdl-textfield__label(for="sample3") Title
             //- label(for="period_name")
             //- input(type="text", name="period_name", value=period.title)
             input.mdl_button(type="submit")
