Start not state

--- a/views/period.pug
+++ b/views/period.pug
@@ -19,7 +19,7 @@ block content
               label.mdl-textfield__label(for="date") Date
               input.mdl-textfield__input(type="date", id="date", name="date")
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
-              label.mdl-textfield__label(for="start_time") State time
+              label.mdl-textfield__label(for="start_time") Start time
               input.mdl-textfield__input(type="datetime", id="start_time", name="start_time")
             .mdl-textfield.mdl-js-textfield.mdl-textfield--floating-label
               input.mdl-textfield__input(type="datetime", id="end_time", name="end_time")
