--- a/views/periods.pug
+++ b/views/periods.pug
@@ -4,15 +4,14 @@ block content
   .mdl-cell.mdl-cell--12-col.mdl-cell--8-col-tablet.mdl-grid
     .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--4-col-tablet.mdl-cell--12-col-desktop
       .mdl-card__title.mdl-card--expand.mdl-color--teal-300
-        h2.mdl-card__title-text Periodoj
+        h2.mdl-card__title-text Periods
       .mdl-card__supporting-text.mdl-color-text--grey-600
         ul.demo-list-three.mdl-list
           each period in periods
             li.mdl-list__item.mdl-list__item--three-line
               span.mdl-list__item-primary-content
                 i.material-icons.mdl-list__item-avatar schedule
-                span= esperantasPeriodo(period.title)
-                //- span= period.title
+                span= period.title
                 span.mdl-list__item-text-body= prettyPeriod(period)
               span.mdl-list__item-secondary-content
                 a.mdl-list__item-secondary-action(href='/admin/period?date=' + isoDate(period.start_time))
@@ -21,4 +20,7 @@ block content
     .mdl-cell--1-col
 
 block header
-  span.mdl-layout-title= prettyDate(periods[0].day)
+  if periods[0]
+    span.mdl-layout-title= prettyDate(periods[0].day)
+  else
+    span.mdl-layout-title No School
