--- a/views/login.pug
+++ b/views/login.pug
@@ -16,6 +16,7 @@ block content
                 div.mdl-textfield.mdl-js-textfield
                     input.mdl-textfield__input(type="password" id="userpass" name="password")
                     label.mdl-textfield__label(for="userpass") Password
+                input(type="submit" style="display: none")
 
         div.mdl-card__actions.mdl-card--border.right
             button#login.mdl-button.mdl-button--colored.mdl-js-button.mdl-js-ripple-effect Log in
