Breaking change - Add MS schedule
API now offers both MS and US schedule. This has introduced a breaking
change to the following endpoints:

/schedule/all_periods -> /schedule/:school/all_periods
/schedule/period -> /schedule/:school/period
/schedule/next_occurence -> /schedule/:school/next_occurence

- Update initial config

Additional code cleanup

- Replace var with let and const
- Remove unused model Day

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,9 +1,9 @@
 extends base
 
 block content
-    .mdl-cell.mdl-cell--12-col.mdl-cell--8-col-tablet.mdl-grid.mdl-grid--no-spacing
-    .mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--4-col-tablet.mdl-cell--12-col-desktop
-        .mdl-card__title.mdl-card--expand.mdl-color--teal-300
+    div.mdl-cell.mdl-cell--12-col.mdl-cell--8-col-tablet.mdl-grid.mdl-grid--no-spacing
+    div.mdl-card.mdl-shadow--2dp.mdl-cell.mdl-cell--4-col.mdl-cell--4-col-tablet.mdl-cell--12-col-desktop
+        div.mdl-card__title.mdl-card--expand.mdl-color--teal-300
             h2.mdl-card__title-text Kent API Admin
         div.mdl-card__supporting-text.center
             form#login_form(action="/admin/login" method="POST")
